1.k8s_basic/2.multi_pod/nginx_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
    namespace: hyunsub
spec:
    replicas: 2 # 중요! 몇대의 레플리카를 운영할 거냐. 두 대의 복제본 운영
    selector: # 해당 label이 붙은 pod를 지속적으로 모니터링 하겠다는 의미
        matchLabels:
            app: my-nginx
    template:
        # 템플릿 키워드는 나는 pod를 만들건데 metadata와 spec 요소들을 템플릿으로 해서 만들거다라는 의미
        metadata:
            labels: # pod를 만들 때 그 pod들에게 이 label을 붙이겠다는 의미
                app: my-nginx
        spec: # 이 스펙으로 컨테이너를 만들겠다라는 의미
            containers:
                - name: nginx
                  image: nginx #nginx:1.21.6 nginx:1.22.1 nginx:1.24.0
                  ports:
                      - containerPort: 80 # 컨테이너의 내부 포트
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
    namespace: hyunsub
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 80
    selector:
        app: my-nginx
